| Bug #44486 | master_retry_count cannot be displayed | ||
|---|---|---|---|
| Submitted: | 27 Apr 2009 1:21 | Modified: | 22 Nov 2010 20:59 |
| Reporter: | Mikiya Okuno | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Replication | Severity: | S3 (Non-critical) |
| Version: | any | OS: | Any |
| Assigned to: | Luis Soares | CPU Architecture: | Any |
[27 Apr 2009 1:21]
Mikiya Okuno
[27 Apr 2009 4:15]
Valeriy Kravchuk
Thank you for the problem report.
[30 Mar 2010 1:06]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/104581 3183 Luis Soares 2010-03-30 BUG#44486: master_retry_count cannot be displayed SHOW SLAVE STATUS did not show master_retry_count. We fix this by adding a line to the end of the output of SHOW SLAVE STATUS that prints out the current value of master_retry_count. Additionally, several test result files needed to be updated (due to the extra output in SHOW SLAVE STATUS).
[13 Apr 2010 15:02]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/105537 3185 Luis Soares 2010-04-13 BUG#44486: master_retry_count cannot be displayed SHOW SLAVE STATUS did not show master_retry_count. We fix this by adding a line to the end of the output of SHOW SLAVE STATUS that prints out the current value of master_retry_count. Additionally, several test result files needed to be updated (due to the extra output in SHOW SLAVE STATUS). @ mysql-test/suite/rpl/t/rpl_flushlog_loop.test Masked out the new MASTER_RETRY_COUNT field in SHOW SLAVE STATUS.
[13 Apr 2010 18:13]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/105571 3185 Luis Soares 2010-04-13 BUG#44486: master_retry_count cannot be displayed SHOW SLAVE STATUS did not show master_retry_count. We fix this by adding a line to the end of the output of SHOW SLAVE STATUS that prints out the current value of master_retry_count. Additionally, several test result files needed to be updated (due to the extra output in SHOW SLAVE STATUS). @ mysql-test/suite/rpl/t/rpl_flushlog_loop.test Masked out the new MASTER_RETRY_COUNT field in SHOW SLAVE STATUS.
[30 Apr 2010 15:25]
Luis Soares
Queued in mysql-5.1-rep+3: - http://pb2.norway.sun.com/web.py?template=push_details&push=1211298
[16 Aug 2010 6:38]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100816062819-bluwgdq8q4xysmlg) (version source revid:alik@sun.com-20100816062612-enatdwnv809iw3s9) (pib:20)
[13 Nov 2010 16:25]
Bugs System
Pushed into mysql-trunk 5.6.99-m5 (revid:alexander.nozdrin@oracle.com-20101113155825-czmva9kg4n31anmu) (version source revid:vasil.dimov@oracle.com-20100629074804-359l9m9gniauxr94) (merge vers: 5.6.99-m4) (pib:21)
[22 Nov 2010 20:59]
Jon Stephens
Documented this feature addition together with the one introduced in BUG#44209, q.v. for changelog entry, etc.
